--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 if (!input) return;
                 
                 button.disabled = true;
-                button.textContent = "Processing...";
+                button.textContent = "Refreshing...";
                 resultDiv.style.display = 'none';
 
                 try {
